--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -39,8 +39,8 @@
             motion:layout_constraintRight_toRightOf="parent"
             motion:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/recyclerView"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -48,6 +48,16 @@
             android:layout_height="1dp"
             android:layout_width="match_parent"
             android:id="@+id/imageView" />
+        <Constraint
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/textView"
+            motion:layout_constraintRight_toRightOf="parent"
+            motion:layout_constraintLeft_toLeftOf="parent"
+            android:id="@+id/recyclerView"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
     </ConstraintSet>
     <Transition
         motion:constraintSetStart="@+id/start"
