--- a/app/src/main/res/xml/list_row_inside_scene.xml
+++ b/app/src/main/res/xml/list_row_inside_scene.xml
@@ -18,6 +18,13 @@
                motion:motionTarget="@+id/button"
                motion:framePosition="50"
                android:alpha="0" />
+           <KeyAttribute
+               motion:motionTarget="@+id/textView2"
+               android:scaleX="0.8" />
+           <KeyAttribute
+               motion:motionTarget="@+id/textView2"
+               motion:framePosition="50"
+               android:scaleY="1.2" />
        </KeyFrameSet>
         <OnClick />
         <OnClick />
@@ -32,6 +39,14 @@
             motion:layout_constraintTop_toBottomOf="@+id/textView3"
             android:layout_marginEnd="20dp"
             android:alpha="0" />
+        <Constraint
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintLeft_toLeftOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="15dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -46,5 +61,13 @@
             motion:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="10dp"
             android:alpha="1" />
+        <Constraint
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintLeft_toLeftOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="15dp" />
     </ConstraintSet>
 </MotionScene>
